crates/bind9-sdk-core/src/zone/snapshots/bind9_sdk_core__zone__serializer__snapshot_tests__snapshot_roundtrip_minimal_zone.snap
---
source: crates/bind9-sdk-core/src/zone/serializer.rs
expression: serialized2
---
$ORIGIN example.com.
$TTL 3600
example.com.	3600	IN	SOA	ns1.example.com. admin.example.com. 2026031401 3600 900 604800 86400
	3600	IN	NS	ns1.example.com.
	3600	IN	A	192.0.2.1
